--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  
   &:before{
     content:'';
     content: "";
@@ -60,3 +61,4 @@ a {
 * {
   box-sizing: border-box;
 }
+body{background: black;}
